# sg2000-rust

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  \  flake.nix  ops  rust-toolchain.toml  version
.cargo/: config.toml
sg2000-hal/: Cargo.toml  build.rs  memory.x
sg2000-hal/src/: cache.rs  clock.rs  irq.rs  lib.rs  logger.rs  mailbox.rs  peripherals.rs  resource_table.rs  rpmsg.rs  timer.rs  uart.rs  virtio.rs
sg2000-hal/src/uart/: config.rs  mod.rs
sg2000-pac/: Cargo.toml  build.rs  device.x  svd2rust.toml
sg2000-pac/src/: clint.rs  generic.rs  gpio0.rs  interrupt.rs  lib.rs  mailboxes.rs  mtimecmp.rs  plic.rs  uart0.rs
sg2000-pac/src/clint/: msip0.rs  mtimecmph0.rs  mtimecmpl0.rs  ssip0.rs  stimecmph0.rs  stimecmpl0.rs
sg2000-pac/src/generic/: atomic.rs
sg2000-pac/src/gpio0/: ddr.rs  debounce.rs  dr.rs  eoi.rs  ext.rs  int_polarity.rs  inten.rs  intmask.rs  intstatus.rs  inttype_level.rs  ls_sync.rs  raw_intstatus.rs
sg2000-pac/src/mailboxes/: context.rs  cpu_mbox_en.rs  cpu_mbox_int.rs  cpu_mbox_set.rs  cpu_mbox_status.rs  mbox_set.rs  mbox_status.rs  spinlock.rs
sg2000-pac/src/mailboxes/cpu_mbox_int/: int_int.rs  int_raw.rs
sg2000-pac/src/mailboxes/cpu_mbox_set/: int_clr.rs  int_mask.rs
sg2000-pac/src/mtimecmp/: mtimecmp_high.rs  mtimecmp_low.rs
sg2000-pac/src/plic/: claim.rs  enable.rs  plic_h0_mclaim.rs  plic_h0_mie.rs  plic_h0_mth.rs  plic_h0_sclaim.rs  plic_h0_sie.rs  plic_h0_sth.rs  plic_h1_mclaim.rs  plic_h1_mie.rs  plic_h1_mth.rs  plic_h1_sclaim.rs  plic_h1_sie.rs  plic_h1_sth.rs  plic_ip.rs  plic_per.rs  plic_prio.rs  priority.rs  priority_threshold.rs
sg2000-pac/src/plic/enable/: bits.rs
sg2000-pac/src/uart0/: dlh.rs  dll.rs  dmasa.rs  far.rs  fcr.rs  htx.rs  ier.rs  iir.rs  lcr.rs  lpdlh.rs  lpdll.rs  lsr.rs  mcr.rs  msr.rs  rbr_thr.rs  rbr_thr_dll.rs  rfl.rs  rfw.rs  sbcr.rs  sdmam.rs  sfe.rs  srbr.rs  srr.rs  srt.rs  srts.rs  stet.rs  sthr.rs  tfl.rs  tfr.rs  usr.rs
sg2000-pac/svd/: SG2000.svd
synthgut/: Cargo.toml  build.rs  memory.x
synthgut/.cargo/: config.toml
synthgut/src/: irq.rs  logger.rs  main.rs  timer.rs  uart.rs
xtask/src/: main.rs
