[package]
name = "sg2000-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
embassy-time-driver = { version = "0.2.1", features = ["tick-hz-1_000_000"], optional = true }
embassy-time-queue-utils = { version = "0.3.0", optional = true }
riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
sg2000-pac = { version = "0.1.0", path = "../sg2000-pac", features = ["critical-section", "rt"] }

[features]
default = []
embassy = ["dep:embassy-time-driver", "dep:embassy-time-queue-utils"]
