[package]
name = "sg2000-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
embassy-time-driver = { version = "0.2.1", features = ["tick-hz-1_000_000"], optional = true }
embassy-time-queue-utils = { version = "0.3.0", optional = true }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
heapless = "0.9.2"
riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
sg2000-pac = { version = "0.1.0", path = "../sg2000-pac", features = ["critical-section", "rt"] }
xuantie-riscv = { git = "https://github.com/rustsbi/xuantie", version = "0.0.0" }

[features]
default = []
embassy = ["dep:embassy-time-driver", "dep:embassy-time-queue-utils"]
