[package]
name = "synthgut"
version = "0.1.0"
edition = "2024"
[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = ["executor-thread", "nightly", "arch-riscv32"] }
embassy-time = "0.5.0"
embassy-time-driver = { version = "0.2.1", features = ["tick-hz-1_000_000"] }
riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
riscv-rt = "0.16.0"
sg2000-pac = { version = "0.1.0", path = "../sg2000-pac", features = ["critical-section", "rt"] }
vcell = "0.1.3"
xuantie-riscv = { git = "https://github.com/rustsbi/xuantie", version = "0.0.0" }
