[package]
name = "synthgut"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = ["executor-thread", "nightly", "arch-riscv32"] }
embassy-time = "0.5.0"
riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
riscv-rt = "0.16.0"
sg2000-hal = { version = "0.1.0", path = "../sg2000-hal", features = ["embassy"] }
static_cell = "2.1.1"
vcell = "0.1.3"
xuantie-riscv = { git = "https://github.com/rustsbi/xuantie", version = "0.0.0" }

[build-dependencies]
chrono = "0.4.42"
